<resources>
    <string name="app_name">FaceAttend</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="history">History</string>
    <string name="requestLeave">Request Leave</string>
    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_leaves">My Leaves</string>
    <string name="analysis">Analysis</string>
    <string name="title_activity_select_office_location">SelectOfficeLocation</string>
    <string name="continue_as">Continue as:</string>
    <string name="employee">Employee</string>
    <string name="manager">Manager</string>
    <string name="welcome">Welcome,</string>
    <string name="selectOffice">Select Office Location</string>
    <string name="chooseRadius">Choose Radius</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_employees">View Employees</string>
    <string name="create_org">Create org</string>
    <string name="org_profile">Org Details</string>
    <string name="manage_leaves">Manage Leaves</string>
    <string name="title_activity_man_leaves">ManLeavesActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="attendance">Attendance</string>
</resources>