<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="2dp"
        android:background="@drawable/rectangle_1">
        <TextView
            android:id="@+id/text_view_id"
            android:layout_width="141dp"
            android:layout_height="26dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="11dp"
            android:fontFamily="@font/inter"
            android:gravity="center_vertical"
            android:text="@string/login"
            android:textAppearance="@style/login"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/email"
        android:layout_width="218dp"
        android:layout_height="33dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="98dp"
        android:text="@string/email"
        android:textAppearance="@style/textHeader"
        android:textSize="14sp"
        android:gravity="center_vertical"
        />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/rectangle_2"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <TextView
        android:id="@+id/password"
        android:layout_width="218dp"
        android:layout_height="33dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="9dp"
        android:text="@string/password"
        android:textSize="14sp"
        android:textAppearance="@style/textHeader"
        android:gravity="center_vertical"
        />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/rectangle_2"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <TextView
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/buttonbg"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/login"
        android:textAppearance="@style/primaryBigButton" />

    <TextView
        android:id="@+id/regButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/regbuttonbg"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/register"
        android:textAppearance="@style/secondaryBigButton" />


</LinearLayout>