<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RequestLeave">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="2dp"
        android:background="@drawable/rectangle_1">
        <TextView
            android:id="@+id/text_view_id"
            android:layout_width="151dp"
            android:layout_height="26dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="11dp"
            android:fontFamily="@font/inter"
            android:gravity="center_vertical"
            android:text="@string/requestLeave"
            android:textAppearance="@style/login"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/startDateLabel"
        android:layout_width="218dp"
        android:layout_height="33dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="98dp"
        android:text="Start Date"
        android:textAppearance="@style/textHeader"
        android:textSize="14sp"
        android:gravity="center_vertical"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pick Date"
        />
    <EditText
        android:id="@+id/emailInput"
        android:paddingLeft="2dp"
        android:layout_width="264dp"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/rectangle_2" />
    <TextView
        android:id="@+id/endDateLabel"
        android:layout_width="218dp"
        android:layout_height="33dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="9dp"
        android:text="End Date"
        android:textSize="14sp"
        android:textAppearance="@style/textHeader"
        android:gravity="center_vertical"
        />

    <EditText
        android:id="@+id/passwordInput"
        android:paddingLeft="2dp"
        android:inputType="textPassword"
        android:layout_width="264dp"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/rectangle_2" />

    <TextView
        android:id="@+id/loginButton"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/buttonbg"
        android:text="@string/login"
        android:textAppearance="@style/primaryBigButton"
        android:gravity="center_horizontal|center_vertical"
        />
    <TextView
        android:id="@+id/regButton"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/regbuttonbg"
        android:text="@string/register"
        android:textAppearance="@style/secondaryBigButton"
        android:gravity="center_horizontal|center_vertical"
        />


</LinearLayout>