<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/home_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity"
        tools:ignore="HardcodedText">


        <LinearLayout
            android:id="@+id/rectangle_6"
            android:layout_width="match_parent"
            android:layout_height="294dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/dashboard_bigrect"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="208dp"
                android:gravity="bottom|center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/apr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="17"
                    android:textAppearance="@style/apr"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/apr2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="APR"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/apr"
                    android:textSize="36sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/BSelectImage2"
                android:layout_width="160dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:background="@drawable/buttonbg"
                android:gravity="center_horizontal|center_vertical"
                android:text="Today's Report"
                android:textAppearance="@style/mark_attend"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            //History

            <LinearLayout
                android:id="@+id/viewemprect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle_6"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_marginTop="70dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/view_employees"
                    android:textAppearance="@style/history"
                    android:textStyle="bold" />

            </LinearLayout>


            // Analysis

            <LinearLayout
                android:id="@+id/orgdetailsrect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle_6"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/orgdetailstext"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_marginTop="70dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/org_profile"
                    android:textAppearance="@style/history"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            // Request leave

            <LinearLayout
                android:id="@+id/manageLeavesRect"
                android:layout_width="match_parent"
                android:layout_height="101dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle_6"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/manLeave"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_marginTop="70dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/manage_leaves"
                    android:textAppearance="@style/history"
                    android:textStyle="bold" />
            </LinearLayout>

            // My leaves

            <LinearLayout
                android:id="@+id/createorgrect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle_6"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_marginTop="70dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/create_org"
                    android:textAppearance="@style/history"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <!--        <Button-->
        <!--            android:id="@+id/BSelectImage"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="102dp"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:text="SELECT IMAGE"-->
        <!--            android:textColor="@android:color/white"-->
        <!--            android:textSize="18sp" />-->
        <!--Button to open the image selector-->


        <!--ImageView to preview the selected image-->
        <!--    <ImageView-->
        <!--        android:id="@+id/IVPreviewImage"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="300dp"-->
        <!--        android:layout_below="@id/BSelectImage"-->
        <!--        android:layout_marginStart="16dp"-->
        <!--        android:layout_marginTop="16dp"-->
        <!--        android:layout_marginEnd="16dp" />-->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>